manifests/prod/express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - discbaboons.spirojohn.com
    secretName: discbaboons-tls
  rules:
  - host: discbaboons.spirojohn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: express-service
            port:
              number: 80
