manifests/prod/redis-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  ingress:
  # Only allow connections from Express pods
  - from:
    - podSelector:
        matchLabels:
          app: express
    ports:
    - protocol: TCP
      port: 6379
